--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <model-viewer 
     src="Sketchfab_Scene.glb" 
+    ios-src="Sketchfab_Scene.usdz"
     alt="AR model" 
     ar 
     ar-modes="scene-viewer quick-look webxr" 
