--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
   <model-viewer 
-    src="Sketchfab_Scene.glb" 
-    ios-src="Sketchfab_Scene.usdz"
-    alt="AR model" 
-    ar 
-    ar-modes="scene-viewer quick-look webxr" 
-    camera-controls 
-    auto-rotate 
+    src="Sketchfab_Scene.glb"       <!-- GLB pro Android / web -->
+    ios-src="Oasis.usdz"             <!-- USDZ pro iOS -->
+    alt="3D AR model"
+    ar
+    ar-modes="scene-viewer quick-look webxr"
+    camera-controls
+    auto-rotate
     shadow-intensity="1">
   </model-viewer>
 </body>
