--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     camera-controls
     auto-rotate
     shadow-intensity="1">
+     <button slot="ar-button" style="
+      position: absolute;
+      bottom: 24px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 20px;
+      border-radius: 12px;
+      border: none;
+      background-color: #4cc9f0;
+      color: #000;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;">
+    View in AR
+  </button>
   </model-viewer>
 </body>
 </html>
