--- a/index.html
+++ b/index.html
@@ -1,40 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Model Demo</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <style>
-    body { margin: 0; background: #000; }
-    model-viewer { width: 100vw; height: 100vh; }
-  </style>
-</head>
-<body>
-  <model-viewer 
-    src="Sketchfab_Scene.glb"       <!-- GLB pro Android / web -->
-    ios-src="Oasis.usdz"             <!-- USDZ pro iOS -->
-    alt="3D AR model"
+<model-viewer 
+    src="Sketchfab_Scene.glb"
+    ios-src="Oasis.usdz"
+    alt="AR model"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
     auto-rotate
-    shadow-intensity="1">
-     <button slot="ar-button" style="
-      position: absolute;
-      bottom: 24px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 20px;
-      border-radius: 12px;
-      border: none;
-      background-color: #4cc9f0;
-      color: #000;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;">
-    View in AR
-  </button>
-  </model-viewer>
-</body>
-</html>
+    shadow-intensity="1"
+    style="width:100vw; height:100vh;">
+</model-viewer>
