--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <model-viewer 
-    src="Sketchfab_Scene.glb"
-    ios-src="Oasis.usdz"
+    src="blazing_oasis.glb"
+    ios-src="blazing_oasis.usdz"
     alt="AR model"
     ar
     ar-modes="scene-viewer quick-look webxr"
