--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
-<model-viewer 
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3D AR Model</title>
+  <!-- Import model-viewer knihovny -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    model-viewer {
+      width: 100%;
+      max-width: 600px;
+      height: 80vh;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      background-color: white;
+    }
+  </style>
+</head>
+<body>
+  <model-viewer 
     src="blazing_oasis.glb"
     ios-src="blazing_oasis.usdz"
-    alt="AR model"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
     auto-rotate
-    shadow-intensity="1"
-    style="width:100vw; height:100vh;">
-</model-viewer>
+    background-color="#ffffff">
+  </model-viewer>
+</body>
+</html>
