--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 <body>
   <model-viewer 
-    src="blazing_oasis.glb"
-    ios-src="blazing_oasis.usdz"
+    src="camels_respite.glb"
+    ios-src="Camels_Respite.usdz"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
