--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <model-viewer
-    src="blazing_oasis.glb"
-    ios-src="blazing_oasis.usdz"
+    src="human_eye.glb"
+    ios-src="Human_Eye.usdz"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
