--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <model-viewer
-    src="oasis1.glb"
-    ios-src="oasis1.usdz"
+    src="camel_respite.glb"
+    ios-src="Camel_Respite.usdz"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
