--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <model-viewer
-    src="camel_respite.glb"
-    ios-src="Camel_Respite.usdz"
+    src="camels_respite.glb"
+    ios-src="Camels_Respite.usdz"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
