--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <model-viewer
     src="camels_respite.glb"
-    ios-src="river_oasis.usdz"
+    ios-src="model-4.usdz"
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
